Whitespace fix

--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,15 @@ a {
     text-decoration: none;
     color: inherit;
 }
+h1 {font-size: 3rem;}
+h2 {font-size: 2.5rem;}
+h3 {font-size: 2rem;}
+h4 {font-size: 1.5rem;}
+h5 {font-size: 1rem;}
+h6 {font-size: 0.5rem;}
 
 header {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     padding: 50px;
     display: flex;
@@ -35,7 +41,9 @@ header {
 }
 
 main {
+    width: 100%;
     display: flex;
+    flex-flow: row wrap;
     flex-direction: column;
     border-top: 5px solid #191959;
     padding: 100px 350px;
